src/components/Header/Header.scss
.header {
    align-items: center;
    background-color: theme-color("accent-2");
    display: flex;
    height: 44px;
    justify-content: center;
    width: 100%;

    @include if-tablet {
        height: 50px;
        justify-content: flex-end;
        padding-left: spacer(small-l);
    }

    &__menu-icon {
        background-color: inherit;
        background-image: url('/assets/img/menuIcon.png');
        border: none;
        height: 14px;
        margin-left: spacer(small-l);
        margin-right: auto;
        width: 16px;

        @include if-tablet {
            display: none;
        }
    }

    &__photo {
        margin-left: auto;
        margin-right: spacer(s);
        margin-top: 4px;


        @include if-tablet {
            margin-left: 0;
            margin-right: spacer(small-xl);
        }
    }
}

